[0002]-finish navBar component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,10 @@
 ---
+import Navbar from "../components/Navbar.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Fezex portfolio">
   <main>
-    <div></div>
+    <Navbar name="Eyad-Ahmed" />
   </main>
 </Layout>
-
-<style></style>
