--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,7 @@
 ---
+import Navbar from "../components/Navbar.astro";
+import Footer from "../components/Footer";
+
 interface Props {
   title: string;
 }
@@ -18,7 +21,9 @@ const { title } = Astro.props;
   </head>
   <body>
     <main>
+      <Navbar name="Eyad-Ahmed" />
       <slot />
+      <Footer label="find me in:" />
     </main>
   </body>
 </html>
@@ -27,4 +32,7 @@ const { title } = Astro.props;
   @tailwind components;
   @tailwind utilities;
   @import url("https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Fira+Code:wght@300..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Sora:wght@100..800&display=swap");
+  a {
+    @apply text-[16px];
+  }
 </style>
