[0007]-remove nav & footer from index and add hero component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
-import Navbar from "../components/Navbar.astro";
+import Hero from "../components/Hero.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Fezex portfolio">
-  <Navbar name="Eyad-Ahmed" />
+  <Hero />
 </Layout>
