--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
 import Navbar from "../components/Navbar.astro";
 import Footer from "../components/Footer";
-
+import Loading from "../components/Loading.astro";
 interface Props {
   title: string;
 }
@@ -20,7 +20,8 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
-    <main>
+    <Loading client:load />
+    <main class="relative z-0">
       <Navbar name="Eyad-Ahmed" />
       <slot />
       <Footer label="find me in:" />
