--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,6 +1,6 @@
 ---
-import Link from "./Link";
-import NavigationLinks from "./NavigationLinks";
+import Link from "./Link.astro";
+import NavigationLinks from "./NavigationLinks.astro";
 const { name } = Astro.props;
 ---
 
@@ -8,7 +8,7 @@ const { name } = Astro.props;
   class="bg-Code grid grid-cols-12 w-full text-Code font-fira gap-[1px] py-[1px]"
 >
   <p class="bg-background py-2 pl-[22px] col-span-2">{name}</p>
-  <NavigationLinks client:only />
+  <NavigationLinks client:visible />
   <div class="bg-background col-span-6"></div>
-  <Link to="./contacts" label="_contacts-me" client:only />
+  <Link to="./contacts" label="_contacts-me" client:visible />
 </nav>
