[0012]-edit nav & footer style

--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -5,7 +5,7 @@ const { pathname } = Astro.url;
 
 <a
   href={to}
-  class={`col-span-1 hover:text-white text-Code text-center bg-background py-2 after:bg-btn after:h-0.5 after:absolute after:bottom-0 after:left-0 relative  after:hover:w-full duration-150 after:duration-300 ${pathname == to ? "text-white after:w-full" : "after:w-0"} `}
+  class={`col-span-1 hover:text-white text-Code text-center bg-background flex justify-center items-center after:bg-btn after:h-0.5 after:absolute after:bottom-0 after:left-0 relative  after:hover:w-full duration-150 after:duration-300 ${pathname == to ? "text-white after:w-full" : "after:w-0"} `}
 >
   {label}
 </a>
