--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -7,7 +7,9 @@ const { name } = Astro.props;
 <nav
   class="bg-Code grid grid-cols-12 w-full text-Code font-fira gap-[1px] py-[1px]"
 >
-  <p class="bg-background py-2 pl-[22px] col-span-2">{name}</p>
+  <p class="bg-background flex items-center text-[14px] pl-[22px] col-span-2">
+    {name}
+  </p>
   <NavigationLinks client:visible />
   <div class="bg-background col-span-6"></div>
   <Link to="./contacts" label="_contacts-me" client:visible />
