--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,16 +1,16 @@
 ---
-import Link from "./Link.astro";
-import NavigationLinks from "./NavigationLinks.astro";
+import Link from "./Link";
+import NavigationLinks from "./NavigationLinks";
 const { name } = Astro.props;
 ---
 
 <nav
-  class="bg-Code grid grid-cols-12 w-full text-Code font-fira gap-[1px] py-[1px]"
+  class="bg-Code grid grid-cols-12 w-full text-Code font-fira gap-[1px] py-[1px] border-x border-x-Code"
 >
   <p class="bg-background flex items-center text-[14px] pl-[22px] col-span-2">
     {name}
   </p>
-  <NavigationLinks client:visible />
+  <NavigationLinks client:only />
   <div class="bg-background col-span-6"></div>
-  <Link to="./contacts" label="_contacts-me" client:visible />
+  <Link to="./contacts" label="_contacts-me" client:only />
 </nav>
