--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,7 +20,7 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
-    <Loading client:load />
+    <Loading />
     <main class="relative z-0 grid grid-rows-18 h-screen">
       <Navbar name="Eyad-Ahmed" />
       <slot />
