[0016]-finish index page content

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,5 +1,13 @@
 ---
-
+import Content from "./content";
+import Identity from "./identity";
 ---
 
-<div class="bg-background row-span-16 border-x border-x-Code"></div>
+<div class="bg-background row-span-16 border-x border-x-Code">
+  <div
+    class="flex items-center relative left-[5.5rem] xl:justify-center h-full gap-[5rem] xl:gap-[10rem]"
+  >
+    <Identity />
+    <Content />
+  </div>
+</div>
