--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -3,9 +3,9 @@ import Content from "./content";
 import Identity from "./identity";
 ---
 
-<div class="bg-background row-span-16 border-x border-x-Code">
+<div class="bg-background row-span-17 lg:row-span-16 border-x border-x-Code">
   <div
-    class="flex items-center relative left-[5.5rem] xl:justify-center h-full gap-[5rem] xl:gap-[10rem]"
+    class="flex items-center relative px-[16px] lg:left-[5.5rem] xl:justify-center h-full gap-[5rem] xl:gap-[10rem]"
   >
     <Identity />
     <Content />
