[0018]-enhance Index page

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -7,7 +7,7 @@ import Identity from "./identity";
   <div
     class="flex items-center relative px-[16px] lg:left-[5.5rem] xl:justify-center h-full gap-[5rem] xl:gap-[10rem]"
   >
-    <Identity />
-    <Content />
+    <Identity client:load />
+    <Content client:visible />
   </div>
 </div>
