--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,6 +1,6 @@
 ---
-import Link from "./Link";
-import NavigationLinks from "./NavigationLinks";
+import Link from "./Link.astro";
+import NavigationLinks from "./NavigationLinks.astro";
 const { name } = Astro.props;
 ---
 
@@ -12,7 +12,7 @@ const { name } = Astro.props;
   >
     {name}
   </p>
-  <NavigationLinks client:only />
+  <NavigationLinks client:visible />
   <div
     class="bg-background hidden lg:block col-span-2 lg:col-span-4 xl:col-span-6"
   >
@@ -21,6 +21,6 @@ const { name } = Astro.props;
     to="./contacts"
     label="_contacts-me"
     className="hidden lg:flex"
-    client:only
+    client:visible
   />
 </nav>
