[0019]-add Landing animation to index

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,5 +1,5 @@
 ---
-import Content from "./content";
+import ContentJson from "./content";
 import Identity from "./identity";
 ---
 
@@ -8,6 +8,6 @@ import Identity from "./identity";
     class="flex items-center relative px-[16px] lg:left-[5.5rem] xl:justify-center h-full gap-[5rem] xl:gap-[10rem]"
   >
     <Identity client:load />
-    <Content client:visible />
+    <ContentJson client:visible />
   </div>
 </div>
