--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -5,7 +5,7 @@ const { name } = Astro.props;
 ---
 
 <nav
-  class="bg-Code grid md:grid-cols-8 lg:grid-cols-10 xl:grid-cols-12 w-full text-Code font-fira gap-[1px] py-[1px] border-x border-x-Code"
+  class="bg-Code grid relative z-10 md:grid-cols-8 lg:grid-cols-10 xl:grid-cols-12 w-full text-Code font-fira gap-[1px] py-[1px] border-x border-x-Code"
 >
   <p
     class="bg-background flex items-center text-[16px] lg:text-[14px] pl-[22px] col-span-2"
