--- a/src/components/NavigationLinks.astro
+++ b/src/components/NavigationLinks.astro
@@ -2,7 +2,7 @@
 import Link from "./Link.astro";
 ---
 
-<div class="hidden lg:grid grid-cols-3 col-span-3 gap-[1px]">
+<div class="hidden lg:grid grid-cols-3 col-span-3 gap-[1px] w-full">
   <Link to="." label="_hello" />
   <Link to="./about" label="_about-me" />
   <Link to="./projects" label="_projects" />
