--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -1,11 +1,11 @@
 ---
-const { to, label } = Astro.props;
+const { to, label, className = "" } = Astro.props;
 const path = Astro.url.pathname;
 ---
 
 <a
   href={to}
-  class={`col-span-1 w-full hover:before:w-full hover:text-white text-Code text-center bg-background flex justify-center items-center before:bg-btn before:h-0.5 before:absolute before:bottom-0 before:left-0 relative  duration-150 before:duration-300 ${path.match(to) ? "text-white before:w-full" : "before:w-0"} `}
+  class={`col-span-1 w-full hover:before:w-full hover:text-white text-Code text-center bg-background flex justify-center items-center before:bg-btn before:h-0.5 before:absolute before:bottom-0 before:left-0 relative  duration-150 before:duration-300 ${path.match(to) ? "text-white before:w-full" : "before:w-0"} ${className}`}
 >
   {label}
 </a>
