--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,5 +1,6 @@
 ---
 import Link from "./Link.astro";
+import Menu from "./menu";
 import NavigationLinks from "./NavigationLinks.astro";
 const { name } = Astro.props;
 ---
@@ -7,12 +8,17 @@ const { name } = Astro.props;
 <nav
   class="bg-Code grid relative z-10 md:grid-cols-8 lg:grid-cols-10 xl:grid-cols-12 w-full text-Code font-fira gap-[1px] py-[1px] border-x border-x-Code"
 >
-  <p
-    class="bg-background flex items-center text-[16px] lg:text-[14px] pl-[22px] col-span-2"
+  <div
+    class="bg-background border-b border-b-Code lg:border-b-0 justify-between flex items-center col-span-12 lg:col-span-2"
   >
-    {name}
-  </p>
-  <NavigationLinks client:visible />
+    <p class="text-[16px] px-2 lg:text-[14px] lg:pl-[22px]">
+      {name}
+    </p>
+    <div class="lg:hidden">
+      <Menu client:visible />
+    </div>
+  </div>
+  <NavigationLinks />
   <div
     class="bg-background hidden lg:block col-span-2 lg:col-span-4 xl:col-span-6"
   >
