--- a/src/components/Loading.astro
+++ b/src/components/Loading.astro
@@ -18,11 +18,11 @@
   </div>
 </div>
 <script is:inline>
-  document.addEventListener("DOMContentLoaded", () => {
-    const terminal = document.querySelector(".loading");
+  const terminal = document.querySelector(".loading");
+  setTimeout(() => {
     terminal.classList.add("hidden");
     terminal.classList.remove("block");
-  });
+  }, 1000);
 </script>
 
 <style>
