--- a/src/components/NavigationLinks.astro
+++ b/src/components/NavigationLinks.astro
@@ -3,9 +3,9 @@ import Link from "./Link";
 ---
 
 <div class="hidden lg:grid grid-cols-3 col-span-3 gap-[1px] w-full">
-  <Link to="." label="_hello" client:only />
-  <Link to="./about" label="_about-me" client:only />
-  <Link to="./projects" label="_projects" client:only />
+  <Link to="." label="_hello" className=" justify-center" />
+  <Link to="./about" label="_about-me" className=" justify-center" />
+  <Link to="./projects" label="_projects" className=" justify-center" />
 </div>
 
 <style></style>
