--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,8 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import AboutContent from "../components/AboutContent.astro";
 ---
 
-<Layout title="about"><div></div></Layout>
+<Layout title="About"><AboutContent /></Layout>
 
 <style></style>
