[0033]-fix icon path

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,7 +24,7 @@ const { title } = Astro.props;
     <link
       rel="icon"
       type="image/svg+xml"
-      href="../../public/letter-f-svgrepo-com.svg"
+      href="../../letter-f-svgrepo-com.svg"
     />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
