[0036]-change content component to CodeBlock

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,7 +30,7 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
-    <!-- <Loading /> -->
+    <Loading />
     <main class="relative z-0 grid grid-rows-18 h-screen overflow-hidden">
       <Navbar name="Eyad-Ahmed" />
       <slot />
